--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "antd": "^4.16.9",
+    "axios": "^0.21.1",
     "next": "11.0.1",
     "next-redux-wrapper": "^7.0.2",
     "react": "17.0.2",
