--- a/package.json
+++ b/package.json
@@ -16,14 +16,18 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-redux": "^7.2.4",
+    "react-sizes": "^2.0.0",
     "react-spinners": "^0.11.0",
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
+    "styled-components": "^5.3.0",
     "universal-cookie": "^4.0.4"
   },
   "devDependencies": {
+    "babel-plugin-styled-components": "^1.13.2",
     "eslint": "7.31.0",
-    "eslint-config-next": "11.0.1"
+    "eslint-config-next": "11.0.1",
+    "styled-reset": "^4.3.4"
   }
 }
